--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,6 +1,8 @@
 <h1>id:<%= @task.id %>のタスク詳細ページ</h1>
 
-<p><%= @task.content %></p>
+<p>タスク：<%= @task.content %></p>
+<p>ステータス：<%= @task.status %></p>
+
 <%= link_to 'タスク一覧に戻る' , tasks_path %>
 <%= link_to 'タスクを修正する' , edit_task_path(@task) %>
 <%= link_to 'タスクを完了する' , @task, method: :delete, data: { confirm: '本当に完了（削除）してよろしいですか？' } %>
