--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -27,7 +27,11 @@
   <div class="center jumbotron">
     <div class="text-center">
       <h1>Welcome to the tasklist</h1>
-      <%= link_to 'Sign up now!', signup_path, class: 'btn btn-lg btn-primary' %>
+      <div class="text-center">
+    <%= link_to 'Signup', signup_path, class: 'btn btn-lg btn-primary' %>
+    <%= link_to 'Login', login_path, class: 'btn btn-lg btn-primary' %>
+  </div>
     </div>
   </div>
+  
 <% end %>
