--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,39 +1,5 @@
 <% if logged_in? %>
-  <h1>タスク一覧</h1>
-  <% if @tasks.any? %>
-    <table class="table table-striped">
-      <thead>
-        <tr>
-          <th>id</th>
-          <th>タスク</th>
-          <th>ステータス</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @tasks.each do |task| %>
-          <% if task.user_id == current_user.id %>
-            <tr>
-              <td><%= link_to task.id, task %></td>
-              <td><%= task.content %></td>
-              <td><%= task.status %></td>
-            </tr>
-          <% end %>
-        <% end %>
-      </tbody>
-    </table>
-    <div>
-      <%= paginate @tasks %>
-    </div>
-  <% end %>
+  <%= render 'index', tasks: @tasks %>
 <% else %>
-  <div class="center jumbotron">
-    <div class="text-center">
-      <h1>Welcome to the tasklist</h1>
-      <div class="text-center">
-    <%= link_to 'Signup', signup_path, class: 'btn btn-lg btn-primary' %>
-    <%= link_to 'Login', login_path, class: 'btn btn-lg btn-primary' %>
-  </div>
-    </div>
-  </div>
-  
+  <%= render 'welcome' %>
 <% end %>
